# CUBICS

./: .gitignore  CMakeLists.txt  README.md  autoCMake.sh
contrib/anyoption/: anyoption.cu  anyoption.h
contrib/flatzinc/: ast.h  conexpr.h  flatzinc.cu  flatzinc.h  generateParser.sh  lexer.lxx  lexer.yy.cu  parser.h  parser.tab.cu  parser.tab.h  parser.yxx  registry.cu  registry.h  varspec.h
examples/: 12-queens.fzn  8-queens_soft.fzn  absmax.fzn  absmax.mzn  absmin.fzn  absmin.mzn  intTimes-10000.fzn  intTimes-2.fzn  intTimes-5.fzn  intTimes.mzn  maxeq.fzn  maxeq.mzn  maxeq3.fzn  maxeq3.mzn  maximization-100.fzn  maximization.mzn  n-queens.mzn  n-queens_soft.mzn
include/choosers/: IntInOrderValuesChooser.h  IntInOrderVariablesChooser.h  IntRandomValuesChooser.h  IntRestrictInOrdVarChooser.h  IntValuesChooser.h  IntVariablesChooser.h
include/constraints/: IntAbs.h  IntConstraints.h  IntLinEq.h  IntLinLe.h  IntLinNe.h  IntOptLb.h  IntOptUb.h  IntTimes.h
include/data_structures/: BitsArray.h  Lock.h  MonotonicIntVector.h  Vector.h
include/domains/: IntDomains.h  IntDomainsActions.h  IntDomainsRepresentations.h
include/options/: Options.h
include/propagators/: IntConstraintsPropagator.h
include/searchers/: IntBacktrackSearcher.h  IntBacktrackStack.h  IntLNSSearcher.h  IntSNBSearcher.h
include/statistics/: Statistics.h
include/utils/: AlgoUtils.h  BitUtils.h  GpuUtils.h  KernelUtils.h  LogUtils.h  MemUtils.h  RandUtils.h  TimerUtils.h  Utils.h
include/variables/: IntNeighborhood.h  IntVariables.h
include/wrappers/: Wrappers.h
src/: Main.cu
src/choosers/: IntInOrderValuesChooser.cu  IntInOrderVariablesChooser.cu  IntRandomValuesChooser.cu  IntRestrictInOrdVarChooser.cu  IntValuesChooser.cu  IntVariablesChooser.cu
src/constraints/: IntAbs.cu  IntConstraints.cu  IntLinEq.cu  IntLinLe.cu  IntLinNe.cu  IntOptLu.cu  IntOptUb.cu  IntTimes.cu
src/data_structures/: BitsArray.cu  MonotonicIntVector.cu
src/domains/: IntDomains.cu  IntDomainsActions.cu  IntDomainsRepresentations.cu
src/options/: Options.cu
src/propagators/: IntConstraintsPropagator.cu
src/searchers/: IntBacktrackSearcher.cu  IntBacktrackStack.cu  IntLNSSearcher.cu  IntSNBSearcher.cu
src/statistics/: Statistics.cu
(+7 files in other folders)
